--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
 # Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+bin-debug/ yoo im loki
+bin-release/ xd..
+[Oo]bj/ why are you here..
+[Bb]in/ .....?
 
 # Other files and folders
 .settings/
 
 # Executables
-*.swf
+*.swf 
 *.air
 *.ipa
 *.apk
+*.lv 25..
+*.he/him
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
